--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
+  <package id="Autofac" version="4.2.0" targetFramework="net462" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
   <package id="bootstrap" version="3.0.0" targetFramework="net462" />
   <package id="jQuery" version="1.10.2" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net462" />
@@ -21,6 +23,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
+  <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
+  <package id="NServiceBus.Autofac" version="6.0.1" targetFramework="net462" />
+  <package id="NServiceBus.Callbacks" version="2.0.1" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
