--- a/src/tests/unit/Components.Tests/packages.config
+++ b/src/tests/unit/Components.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="NServiceBus" version="6.0.0" targetFramework="net462" />
   <package id="NServiceBus.Testing" version="6.0.3" targetFramework="net462" />
+  <package id="NSubstitute" version="2.0.3" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
 </packages>
