--- a/src/src/Messages/Messages.csproj
+++ b/src/src/Messages/Messages.csproj
@@ -46,15 +46,15 @@
     <Compile Include="Commands\AddComment.cs" />
     <Compile Include="Commands\CheckCommentResponse.cs" />
     <Compile Include="Commands\CheckCommentResponseTimeout.cs" />
-    <Compile Include="Commands\CreateGitHubBranch.cs" />
+    <Compile Include="Commands\CreateBranch.cs" />
     <Compile Include="Commands\SendEmail.cs" />
-    <Compile Include="Commands\SendGitHubPullRequest.cs" />
+    <Compile Include="Commands\CreatePullRequest.cs" />
     <Compile Include="Commands\StartAddingComment.cs" />
     <Compile Include="CommentResponseState.cs" />
     <Compile Include="Events\ICommentAdded.cs" />
     <Compile Include="Events\ICommentResponseAdded.cs" />
-    <Compile Include="Events\IGitHubBranchCreated.cs" />
-    <Compile Include="Events\IGitHubPullRequestSent.cs" />
+    <Compile Include="Events\IBranchCreated.cs" />
+    <Compile Include="Events\IPullRequestCreated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
