--- a/src/tests/unit/Components.Tests/Components.Tests.csproj
+++ b/src/tests/unit/Components.Tests/Components.Tests.csproj
@@ -56,6 +56,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="HandlerAddCommentTests.cs" />
+    <Compile Include="HandlerCheckCommentResponseTests.cs" />
     <Compile Include="HandlerCommentSagaTests.cs" />
     <Compile Include="HandlerCreateBranchTests.cs" />
     <Compile Include="HandlerCreatePullRequestTests.cs" />
