set nsb transport

--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -9,7 +9,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="NsbEndpointName" value="[set proper name]" />
+    <add key="NsbEndpointInstanceId" value="[set proper instance id]" />
   </appSettings>
+  <connectionStrings>
+    <add name="NsbTransportConnectionStringName" connectionString="[set proper connection string]" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
