--- a/src/tests/integration/Web.Integration.Tests/Web.Integration.Tests.csproj
+++ b/src/tests/integration/Web.Integration.Tests/Web.Integration.Tests.csproj
@@ -51,16 +51,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Web\Web.csproj">
       <Project>{92259989-dbf5-433c-a277-5e9d8d266c07}</Project>
       <Name>Web</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
