--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -26,6 +26,7 @@
   <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
   <package id="NServiceBus.Autofac" version="6.0.1" targetFramework="net462" />
   <package id="NServiceBus.Callbacks" version="2.0.1" targetFramework="net462" />
+  <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
