set endpoint configuration

--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -10,11 +10,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="NsbEndpointName" value="[set proper name]" />
-    <add key="NsbEndpointInstanceId" value="[set proper instance id]" />
+    <add key="NsbEndpointName" value="[set proper value]" />
+    <add key="NsbEndpointInstanceId" value="[set proper value]" />
+    <add key="NsbErrorQueueName" value="error" />
+    <add key="NsbAuditQueueName" value="audit" />
   </appSettings>
   <connectionStrings>
-    <add name="NsbTransportConnectionStringName" connectionString="[set proper connection string]" />
+    <add name="NsbTransportConnectionStringName" connectionString="[set proper value]" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
