--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -22,10 +22,11 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net462" />
   <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
   <package id="NServiceBus.Autofac" version="6.0.1" targetFramework="net462" />
   <package id="NServiceBus.Callbacks" version="2.0.1" targetFramework="net462" />
+  <package id="NServiceBus.Persistence.Sql" version="2.1.3" targetFramework="net462" />
   <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
