--- a/src/src/Components/packages.config
+++ b/src/src/Components/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net462" />
   <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
   <package id="NServiceBus.Persistence.Sql" version="2.1.3" targetFramework="net462" />
+  <package id="NServiceBus.Persistence.Sql.MsBuild" version="2.1.3" targetFramework="net462" developmentDependency="true" />
 </packages>
