--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -14,6 +14,9 @@
     <add key="NsbEndpointInstanceId" value="[set proper value]" />
     <add key="NsbErrorQueueName" value="error" />
     <add key="NsbAuditQueueName" value="audit" />
+    <add key="NsbIsIntegrationTests" value="true"/>
+
+    <add key="CommentResponseAddedSagaTimeoutInSeconds" value="3"/>
   </appSettings>
   <connectionStrings>
     <add name="NsbTransportConnectionString" connectionString="[set proper value]" />
