--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -30,5 +30,8 @@
   <package id="NServiceBus.Persistence.Sql.MsBuild" version="2.1.3" targetFramework="net462" developmentDependency="true" />
   <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
+  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net462" />
+  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net462" />
+  <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
