--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -15,6 +15,7 @@
     <add key="NsbAuditQueueName" value="audit"/>
     <add key="NsbIsIntegrationTests" value="true"/>
     <add key="CommentResponseAddedSagaTimeoutInSeconds" value="3"/>
+    <add key="DevMode" value="dev"/>
   </appSettings>
   <connectionStrings>
     <add name="NsbTransportConnectionString" connectionString="[set proper value]"/>
