--- a/src/src/Components/packages.config
+++ b/src/src/Components/packages.config
@@ -7,4 +7,5 @@
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net462" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
