--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -33,5 +33,6 @@
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net462" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
