--- a/src/tests/unit/Components.Tests/packages.config
+++ b/src/tests/unit/Components.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="NServiceBus.Testing" version="6.0.3" targetFramework="net462" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
