--- a/src/tests/integration/Web.Integration.Tests/packages.config
+++ b/src/tests/integration/Web.Integration.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net47" />
+  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net47" />
+  <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net47" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
