--- a/src/src/Components/Components.csproj
+++ b/src/src/Components/Components.csproj
@@ -71,6 +71,7 @@
     <Compile Include="GitHub\Dto\Object.cs" />
     <Compile Include="GitHub\Dto\Repository.cs" />
     <Compile Include="GitHub\GitHubApi.cs" />
+    <Compile Include="GitHub\HttpClientExtensionMethods.cs" />
     <Compile Include="GitHub\IGitHubApi.cs" />
     <Compile Include="HandlerAddComment.cs" />
     <Compile Include="HandlerCheckCommentResponse.cs" />
