add implementation of creating github branch

--- a/src/src/Components/Components.csproj
+++ b/src/src/Components/Components.csproj
@@ -68,6 +68,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ComponentsConfigurationManager.cs" />
+    <Compile Include="GitHub\Dto\GitHubRef.cs" />
     <Compile Include="GitHub\Dto\Object.cs" />
     <Compile Include="GitHub\Dto\Repository.cs" />
     <Compile Include="GitHub\GitHubApi.cs" />
