--- a/src/src/Components/Components.csproj
+++ b/src/src/Components/Components.csproj
@@ -68,12 +68,12 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ComponentsConfigurationManager.cs" />
-    <Compile Include="GitHub\Dto\FileContent.cs" />
-    <Compile Include="GitHub\Dto\FileContentPut.cs" />
-    <Compile Include="GitHub\Dto\GitHubRef.cs" />
-    <Compile Include="GitHub\Dto\Object.cs" />
+    <Compile Include="GitHub\Dto\FileContentResponse.cs" />
+    <Compile Include="GitHub\Dto\FileContentRequest.cs" />
+    <Compile Include="GitHub\Dto\BranchRequest.cs" />
+    <Compile Include="GitHub\Dto\RefObject.cs" />
     <Compile Include="GitHub\Dto\PullRequest.cs" />
-    <Compile Include="GitHub\Dto\Repository.cs" />
+    <Compile Include="GitHub\Dto\RepositoryResponse.cs" />
     <Compile Include="GitHub\GitHubApi.cs" />
     <Compile Include="GitHub\HttpClientExtensionMethods.cs" />
     <Compile Include="GitHub\IGitHubApi.cs" />
