--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -9,12 +9,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="UserAgent" value="[set proper value]" />
+    <add key="AuthorizationToken" value="[set proper value]" />
+    <add key="RepositoryName" value="[set proper value]" />
+    <add key="MasterBranchName" value="[set proper value]" />
+    <add key="CommentResponseAddedSagaTimeoutInSeconds" value="[set proper value]" />
+
     <add key="NsbEndpointName" value="[set proper value]" />
     <add key="NsbEndpointInstanceId" value="[set proper value]" />
-    <add key="NsbErrorQueueName" value="error" />
-    <add key="NsbAuditQueueName" value="audit" />
+    <add key="NsbErrorQueueName" value="[set proper value]" />
+    <add key="NsbAuditQueueName" value="[set proper value]" />
     <add key="NsbIsIntegrationTests" value="true" />
-    <add key="CommentResponseAddedSagaTimeoutInSeconds" value="3" />
     <add key="DevMode" value="dev" />
   </appSettings>
   <connectionStrings>
