add package checking missing usage of ConfigureAwait(false)

--- a/src/tests/integration/Web.Integration.Tests/packages.config
+++ b/src/tests/integration/Web.Integration.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="Particular.CodeRules" version="0.2.0" targetFramework="net47" developmentDependency="true" />
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net47" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net47" />
   <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net47" />
