--- a/src/src/Components/packages.config
+++ b/src/src/Components/packages.config
@@ -4,6 +4,7 @@
   <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
   <package id="NServiceBus.Persistence.Sql" version="2.1.3" targetFramework="net462" />
   <package id="NServiceBus.Persistence.Sql.MsBuild" version="2.1.3" targetFramework="net462" developmentDependency="true" />
+  <package id="Particular.CodeRules" version="0.2.0" targetFramework="net47" developmentDependency="true" />
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net462" />
   <package id="Simple.Data.SqlServer" version="0.19.0.0" targetFramework="net462" />
