--- a/src/tests/integration/Components.Integration.Tests/packages.config
+++ b/src/tests/integration/Components.Integration.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="Particular.CodeRules" version="0.2.0" targetFramework="net47" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
