--- a/src/src/Web/packages.config
+++ b/src/src/Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
+  <package id="AsyncFixer" version="1.1.5" targetFramework="net47" developmentDependency="true" />
   <package id="Autofac" version="4.2.0" targetFramework="net462" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
   <package id="bootstrap" version="3.0.0" targetFramework="net462" />
