--- a/src/tests/unit/Components.Tests/packages.config
+++ b/src/tests/unit/Components.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncFixer" version="1.1.5" targetFramework="net47" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net47" />
   <package id="NServiceBus" version="6.3.4" targetFramework="net462" />
   <package id="NServiceBus.Persistence.Sql" version="2.1.3" targetFramework="net47" />
