add implementations: 1. check if pull request exists 2. check if pull request merged

--- a/src/tests/integration/Components.Integration.Tests/app.config
+++ b/src/tests/integration/Components.Integration.Tests/app.config
@@ -5,5 +5,6 @@
     <add key="AuthorizationToken" value="[set proper value]" />
     <add key="RepositoryName" value="[set proper value]" />
     <add key="MasterBranchName" value="[set proper value]" />
+    <add key="pullRequestUri" value="[set proper value]" />
   </appSettings>
 </configuration>
