--- a/src/tests/integration/Components.Integration.Tests/app.config
+++ b/src/tests/integration/Components.Integration.Tests/app.config
@@ -5,6 +5,14 @@
     <add key="AuthorizationToken" value="[set proper value]" />
     <add key="RepositoryName" value="[set proper value]" />
     <add key="MasterBranchName" value="[set proper value]" />
+    <add key="SmtpHost" value="[set proper value]" />
+    <add key="SmtpPort" value="[set proper value]" />
+    <add key="SmtpHostUserName" value="[set proper value]" />
+    <add key="SmtpHostPassword" value="[set proper value]" />
+    <add key="SmtpFrom" value="[set proper value]" />
+    
     <add key="pullRequestUri" value="[set proper value]" />
+    <add key="userName" value="[set proper value]" />
+    <add key="userEmail" value="[set proper value]" />
   </appSettings>
 </configuration>
