configure data required to send email

--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -15,6 +15,11 @@
     <add key="RepositoryName" value="[set proper value]" />
     <add key="MasterBranchName" value="[set proper value]" />
     <add key="CommentResponseAddedSagaTimeoutInSeconds" value="[set proper value]" />
+    <add key="SmtpHost" value="[set proper value]" />
+    <add key="SmtpPort" value="[set proper value]" />
+    <add key="SmtpHostUserName" value="[set proper value]" />
+    <add key="SmtpHostPassword" value="[set proper value]" />
+    <add key="SmtpFrom" value="[set proper value]" />
 
     <add key="NsbEndpointName" value="[set proper value]" />
     <add key="NsbErrorQueueName" value="[set proper value]" />
