--- a/src/src/Web/Web.config
+++ b/src/src/Web/Web.config
@@ -4,31 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <appSettings>
+  <appSettings file="..\..\..\..\settings\blog-comments\web-appsettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-    <add key="UserAgent" value="[set proper value]" />
-    <add key="AuthorizationToken" value="[set proper value]" />
-    <add key="RepositoryName" value="[set proper value]" />
-    <add key="MasterBranchName" value="[set proper value]" />
-    <add key="CommentResponseAddedSagaTimeoutInSeconds" value="[set proper value]" />
-    <add key="SmtpHost" value="[set proper value]" />
-    <add key="SmtpPort" value="[set proper value]" />
-    <add key="SmtpHostUserName" value="[set proper value]" />
-    <add key="SmtpHostPassword" value="[set proper value]" />
-    <add key="SmtpFrom" value="[set proper value]" />
-
-    <add key="NsbEndpointName" value="[set proper value]" />
-    <add key="NsbErrorQueueName" value="[set proper value]" />
-    <add key="NsbAuditQueueName" value="[set proper value]" />
-    <add key="NsbIsIntegrationTests" value="true" />
-    <add key="DevMode" value="dev" />
   </appSettings>
-  <connectionStrings>
-    <add name="NsbTransportConnectionString" connectionString="[set proper value]" />
+  <connectionStrings configSource="web-connectionstrings.config">
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -41,9 +23,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.6.2" />
-    <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-    </httpModules>
+    <!--httpModules-->
+      <!--add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" /-->
+    <!--/httpModules-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -79,10 +61,10 @@
   </runtime>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
-      <remove name="ApplicationInsightsWebTracking" />
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-    </modules>
+    <!--modules-->
+      <!--remove name="ApplicationInsightsWebTracking" /-->
+      <!--add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" /-->
+    <!--/modules-->
   </system.webServer>
   <system.codedom>
     <compilers>
