--- a/src/tests/integration/Web.Integration.Tests/app.config
+++ b/src/tests/integration/Web.Integration.Tests/app.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings configSource="connectionstrings.config">
+  <connectionStrings configSource="components-integration-tests-connectionstrings.config">
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
